testsuite/tests/typecheck/should_compile/T20661.hs
{-# LANGUAGE FunctionalDependencies #-}

module T20661 where

class C a b | a -> b
